# virtual-try-on-clothing-joy

./: .gitignore  AGENTS.md  copy_assets.js  copy_blazer.js  index.html  openapi.yaml  package.json  tailwind.config.ts
backend/: .env.example  pyproject.toml
backend/app/: auth_utils.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  cart.py  products.py  try_on.py
backend/tests/: test_api.py
backend/tests_integration/: conftest.py  test_auth.py  test_cart.py
frontend/: package-lock.json
frontend/src/: index.css  main.tsx
frontend/src/components/: CartDrawer.tsx  ClothingGallery.tsx  Header.tsx  HowItWorks.tsx  ProtectedRoute.tsx  TryOnSection.tsx  VirtualTryOnModal.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/data/: products.ts
frontend/src/hooks/: useProducts.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx  Login.tsx  ProductDetail.tsx  Signup.tsx
src/: App.tsx
src/components/: Footer.tsx  Header.tsx  HeroSection.tsx  TryOnSection.tsx
src/components/ui/: button.tsx
src/pages/: Login.tsx  Signup.tsx
